# image_box_finder

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: w9-checkboxes-and-signature-signed.tif  w9-checkboxes-and-signature.tif
src/image_box_finder/: __main__.py  constants.py  file_utils.py  image_utils.py  step_image.py
